# relay.pleb.one

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG_LOGIN_REVAMP.md  CHANGES.md  Caddyfile  Caddyfile.pleb.one.snippet  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_NOTES.md  DNS_SETUP.md  Dockerfile  FETCH_ERROR_FIX.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_NOTICE.md  NIP05_IMPLEMENTATION.md  NIP05_README.md  NIP07_FIX_DOCUMENTATION.md  NIP07_FLOW_DIAGRAM.md  NIP46_IMPLEMENTATION.md  NIP46_QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SECURITY_LOGIN_REVAMP.md  SECURITY_QUICKREF.md  SUMMARY.md  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
prisma/: schema.prisma
public/: site.webmanifest
relay-rs/: Cargo.toml  Dockerfile
relay-rs/src/: main.rs
scripts/: add_nip05_migration.sql  cron-monthly-refresh.sh  deploy-nip05.sh
src/: env.js
src/app/: layout.tsx  page.tsx
src/app/appeal/: page.tsx
src/app/contact/: page.tsx
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/app/nips/: page.tsx
src/app/privacy/: page.tsx
src/app/report/: page.tsx
src/app/request/: page.tsx
src/app/support/: page.tsx
src/app/terms/: page.tsx
src/components/ui/: cypherpunk.tsx
src/lib/: fetch-utils.ts  nip46-client.ts  nostr-client-dm.ts  nostr-dm.ts  nostr.ts  whitelist-message.ts
src/relay/: nip-registry.ts  server.ts  types.ts
src/server/: auth.ts
src/styles/: globals.css
src/trpc/: providers.tsx  react.tsx  server.ts
src/types/: nostr.d.ts
(+30 files in other folders)
