[package]
name = "relay-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "decompression-full"] }
nostr = { version = "0.29", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
negentropy = "0.3"
hex = "0.4"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.15"
flate2 = "1.0"
